human_written_tests/WebAssembly/processed_control_flow_validation/test_call_5.wast
(assert_invalid
  (module
    (func $arity-1-vs-0 (call 1 (i32.const 1)))
    (func)
  )
  "type mismatch"
)